# emboji

./: README.md  index.html  pyproject.toml
src/emboji/: __init__.py  api.py  embed_emojis.py
static/: index.html
